created the BFSSolver (close #3)